--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #000000;
     color: #FFFFFF;
-    font-family: 'Arial', 'Verdana';
+    font-family: Arial, Verdana;
     margin: 20px;
     h1 {
         font-size: 42px;
